[gd_scene load_steps=3 format=3 uid="uid://s4joiixvs22j"]

[ext_resource type="Script" uid="uid://crdikiqbiqcqf" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_kgchh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgchh"]
bg_color = Color(0.16862746, 0.16862746, 0.16862746, 1)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_kgchh")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kgchh")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Reanudar"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Reiniciar Nivel"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Menu Principal"
